--- a/app/client/templates/main.html
+++ b/app/client/templates/main.html
@@ -2,8 +2,8 @@
   <header class="landing landing__background">
     <nav class="navbar">
       <ul class="navbar__elements">
-        <li><button class="navbar__button buttons"><a href="#">Join Now</a></button></li>
-        <li><a>About</a></li>
+        <li><button class="navbar__button"><a href="#">Join Now</a></button></li>
+        <li><a href="#">About</a></li>
       </ul>
     </nav>
     <div class="landing__content">
@@ -19,12 +19,63 @@
       <div class="intro__summary">
         <p>Liquid Democracy is a new, novel form of decentralized decision making. It combines the best of Direct and Representative Democracy and creates a truly democratic voting system where the voter is fully empowered.</p>
         <p>With Liquid Democracy voters can either vote directly on decisions, or they can delegate their voting power to someone else. This gives voters the choice of how involved they wanted to be in the decision making.</p>
-        <button class="intro__learnmore"><a href="https://medium.com/@DomSchiener/liquid-democracy-true-democracy-for-the-21st-century-7c66f5e53b6f#.8smasiiny">Learn More</a></button>
+        <button class="intro__summary_button"><a href="https://medium.com/@DomSchiener/liquid-democracy-true-democracy-for-the-21st-century-7c66f5e53b6f#.8smasiiny">Learn More</a></button>
       </div>
     </div>
     <div class="intro__list">
       <h1 class="intro__title">Why is it better?</h1>
-      <div class="activity__timer_countdown"></div>
+      <div class="intro__bulletpoints">
+        <ul>
+          <li><i class="fa fa-check"></i> Truly Democratic</li>
+          <li><i class="fa fa-check"></i> Better Representation for <strong>all</strong></li>
+          <li><i class="fa fa-check"></i> Responsibility for Delegates</li>
+          <li><i class="fa fa-check"></i> Better Decisions</li>
+          <li><i class="fa fa-check"></i> Low Entry-Barrier</li>
+          <li><i class="fa fa-check"></i> Scalable</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="participate">
+    <h1 class="participate__title">Try out Liquid Democracy Now</h1>
+    <div class="participate__more">
+      <div class="participate__more_tile col-md-6">
+        <div class="participate__more_icon">
+          <i class="participate__discuss_icon fa fa-comments-o fa-4x"></i>
+        </div>
+        <h3 class="participate__more_title">Discuss</h3>
+        <p class="participate__more_text">Engage with the community and discuss issues demcoratically to find the right option</p>
+      </div>
+      <div class="participate__more_tile col-md-6">
+        <div class="participate__more_icon">
+          <i class="participate__vote_icon fa fa-pencil-square-o fa-4x"></i>
+        </div>
+        <h3 class="participate__more_title">Vote</h3>
+        <p class="participate__more_text">Express your opinion by getting directly involved in the voting process</p>
+      </div>
+      <div class="participate__more_tile col-md-6">
+        <div class="participate__more_icon">
+          <i class="participate__delegate_icon fa fa-user-plus fa-4x"></i>
+        </div>
+        <h3 class="participate__more_title">Delegate</h3>
+        <p class="participate__more_text">Learn more about delegation by actually delegating your voting power to someone</p>
+      </div>
+      <div class="participate__more_tile col-md-6">
+        <div class="participate__more_icon">
+          <i class="participate__validate_icon fa fa-check-square-o fa-4x"></i>
+        </div>
+        <h3 class="participate__more_title">Validate</h3>
+        <p class="participate__more_text">Validate the outcome of decisions and your delegates, powered by the Blockchain</p>
+      </div>
+    </div>
+  </section>
+  <section class="join">
+    <div class="join__people"></div>
+    <div class="join__overlay"></div>
+    <div class="join__text">
+      <h1 class="join__text_title">Join the Action now</h1>
+      <button class="join__text_button">Start Voting</button>
+      <p class="join__text_subtitle">More than <span>150</span> are already writing</p>
     </div>
   </section>
 </template>
