--- a/app/client/templates/head.html
+++ b/app/client/templates/head.html
@@ -2,4 +2,5 @@
   <title>Liquid Democracy - Early Prototype</title>
   <meta charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,200,300,500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
