Added Dashboard Menu

--- a/app/client/templates/head.html
+++ b/app/client/templates/head.html
@@ -1,6 +1,11 @@
 <head>
-  <title>Liquid Democracy - Early Prototype</title>
   <meta charset="utf-8">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200,300,500' rel='stylesheet' type='text/css'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Liquid Democracy - Early Prototype</title>
+  <meta name="description" content="Liquid Democracy application created by Dominik Schiener" />
+  <meta name="keywords" content="liquid democracy, voting, democracy, dominik schiener, decision making" />
+  <meta name="author" content="Dominik Schiener" />
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:400,200,300,500' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
