--- a/app/client/stylesheets/homepage/main.css
+++ b/app/client/stylesheets/homepage/main.css
@@ -151,7 +151,7 @@ html {
 }
 
 .buttons:hover {
-  background-color: #427BAE ;
+  background-color: #2d5e8b;
   top: -2px;
   border-bottom: 2px solid #1A4164;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
@@ -160,7 +160,7 @@ html {
 .buttons:active {
   top: 0px;
   border: 1px solid #1A4164;
-  background-color: #255988;
+  background-color: #2d5e8b;
   box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
