Added feed + Recent Issues

--- a/app/client/stylesheets/homepage/main.css
+++ b/app/client/stylesheets/homepage/main.css
@@ -321,8 +321,9 @@ html {
 .participate__validate_icon {
   vertical-align: center;
   text-align: center;
-  margin-top: 18px;
-  margin-left: 6px;
+  margin-top: 22px;
+  margin-left: 3px;
+  font-size: 40px;
 }
 
 .participate__more_tile {
