--- a/app/client/templates/homepage/home.html
+++ b/app/client/templates/homepage/home.html
@@ -1,4 +1,4 @@
-<template name="main">
+<template name="home">
   <header class="landing landing__background">
     <nav class="navbar">
       <ul class="navbar__elements">
@@ -26,12 +26,12 @@
       <h1 class="intro__title">Why is it better?</h1>
       <div class="intro__bulletpoints">
         <ul>
-          <li><i class="fa fa-check"></i> Truly Democratic</li>
-          <li><i class="fa fa-check"></i> Better Representation for <strong>all</strong></li>
-          <li><i class="fa fa-check"></i> Responsibility for Delegates</li>
-          <li><i class="fa fa-check"></i> Better Decisions</li>
-          <li><i class="fa fa-check"></i> Low Entry-Barrier</li>
-          <li><i class="fa fa-check"></i> Scalable</li>
+          <li><i class="glyphicon glyphicon-ok"></i> Truly Democratic</li>
+          <li><i class="glyphicon glyphicon-ok"></i> Better Representation for <strong>all</strong></li>
+          <li><i class="glyphicon glyphicon-ok"></i> Responsibility for Delegates</li>
+          <li><i class="glyphicon glyphicon-ok"></i> Better Decisions</li>
+          <li><i class="glyphicon glyphicon-ok"></i> Low Entry-Barrier</li>
+          <li><i class="glyphicon glyphicon-ok"></i> Scalable</li>
         </ul>
       </div>
     </div>
@@ -41,28 +41,28 @@
     <div class="participate__more">
       <div class="participate__more_tile col-md-6">
         <div class="participate__more_icon">
-          <i class="participate__discuss_icon fa fa-comments-o fa-4x"></i>
+          <i class="participate__discuss_icon glyphicon glyphicon-comment"></i>
         </div>
         <h3 class="participate__more_title">Discuss</h3>
         <p class="participate__more_text">Engage with the community and discuss issues demcoratically to find the right option</p>
       </div>
       <div class="participate__more_tile col-md-6">
         <div class="participate__more_icon">
-          <i class="participate__vote_icon fa fa-pencil-square-o fa-4x"></i>
+          <i class="participate__vote_icon glyphicon glyphicon-edit"></i>
         </div>
         <h3 class="participate__more_title">Vote</h3>
         <p class="participate__more_text">Express your opinion by getting directly involved in the voting process</p>
       </div>
       <div class="participate__more_tile col-md-6">
         <div class="participate__more_icon">
-          <i class="participate__delegate_icon fa fa-user-plus fa-4x"></i>
+          <i class="participate__delegate_icon glyphicon glyphicon-user"></i>
         </div>
         <h3 class="participate__more_title">Delegate</h3>
         <p class="participate__more_text">Learn more about delegation by actually delegating your voting power to someone</p>
       </div>
       <div class="participate__more_tile col-md-6">
         <div class="participate__more_icon">
-          <i class="participate__validate_icon fa fa-check-square-o fa-4x"></i>
+          <i class="participate__validate_icon glyphicon glyphicon-check"></i>
         </div>
         <h3 class="participate__more_title">Validate</h3>
         <p class="participate__more_text">Validate the outcome of decisions and your delegates, powered by the Blockchain</p>
