--- a/app/client/stylesheets/dashboard/menu.css
+++ b/app/client/stylesheets/dashboard/menu.css
@@ -7,14 +7,29 @@
 }
 
 @font-face {
-		font-weight: normal;
-		font-style: normal;
-		font-family: 'ecoicons';
-		src: url("../fonts/ecoicons/ecoicons.eot");
-		src: url("../fonts/ecoicons/ecoicons.eot?#iefix") format("embedded-opentype"), url("../fonts/ecoicons/ecoicons.woff") format("woff"), url("../fonts/ecoicons/ecoicons.ttf") format("truetype"), url("../fonts/ecoicons/ecoicons.svg#ecoicons") format("svg");
+    font-family: 'icomoon';
+    src:    url('/fonts/icomoon.eot?sv6yly');
+    src:    url('/fonts/icomoon.eot?sv6yly#iefix') format('embedded-opentype'),
+        url('/fonts/icomoon.ttf?sv6yly') format('truetype'),
+        url('/fonts/icomoon.woff?sv6yly') format('woff'),
+        url('/fonts/icomoon.svg?sv6yly#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-/* Icomoon.com */
+[class^="gn-icon-"], [class*=" gn-icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
 .gn-menu-main,
 .gn-menu-main ul {
@@ -25,8 +40,11 @@
 		list-style: none;
 		text-transform: none;
 		font-weight: 300;
-		font-family: 'Lato', Arial, sans-serif;
 		line-height: 60px;
+}
+
+.gn-menu-main ul {
+	border-right: 1px solid #c6d0da;
 }
 
 .gn-menu-main {
@@ -36,6 +54,8 @@
 		width: 100%;
 		height: 60px;
 		font-size: 13px;
+		border-bottom: 1px solid #c6d0da;
+		z-index: 1000;
 }
 
 .gn-menu-main a {
@@ -128,20 +148,6 @@
 		box-shadow: inset 0 1px #c6d0da
 }
 
-
-input.gn-search {
-		position: relative;
-		z-index: 10;
-		padding-left: 60px;
-		outline: none;
-		border: none;
-		background: transparent;
-		color: #5f6f81;
-		font-weight: 300;
-		font-family: 'Lato', Arial, sans-serif;
-		cursor: pointer;
-}
-
 /* placeholder */
 
 .gn-search::-webkit-input-placeholder {
@@ -193,13 +199,6 @@ input.gn-search:focus {
 		color: white
 }
 
-.gn-menu-main a.gn-icon-search {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 60px;
-}
-
 .gn-icon::before {
 		display: inline-block;
 		width: 60px;
@@ -208,54 +207,25 @@ input.gn-search:focus {
 		font-weight: normal;
 		font-style: normal;
 		font-variant: normal;
-		font-family: 'ecoicons';
 		line-height: 1;
 		speak: none;
 		-webkit-font-smoothing: antialiased;
 }
 
-.gn-icon-help::before {
-		content: "\e000"
+.gn-icon-home:before {
+    content: "\e900";
 }
 
-.gn-icon-earth::before {
-		content: "\e004"
+.gn-icon-delegate:before {
+    content: "\e901";
 }
 
-.gn-icon-cog::before {
-		content: "\e006"
+.gn-icon-vote:before {
+    content: "\e903";
 }
 
-.gn-icon-search::before {
-		content: "\e005"
-}
-
-.gn-icon-download::before {
-		content: "\e007"
-}
-
-.gn-icon-photoshop::before {
-		content: "\e001"
-}
-
-.gn-icon-illustrator::before {
-		content: "\e002"
-}
-
-.gn-icon-archive::before {
-		content: "\e00d"
-}
-
-.gn-icon-article::before {
-		content: "\e003"
-}
-
-.gn-icon-pictures::before {
-		content: "\e008"
-}
-
-.gn-icon-videos::before {
-		content: "\e009"
+.gn-icon-cog:before {
+    content: "\e902";
 }
 
 /* if an icon anchor has a span, hide the span */
