--- a/app/client/templates/dashboard/dashboard.html
+++ b/app/client/templates/dashboard/dashboard.html
@@ -1,3 +1,13 @@
 <template name="dashboard">
-  <h1>hello</h1>
+  <section class="dashboard">
+    <div class="dashboard__top">
+      <div class="col-xs-6">
+        {{> dashboard__activity}}
+      </div>
+      <div class="col-xs-6">
+        {{> dashboard__issues}}
+      </div>
+    </div>
+    {{> dashboard__stats}}
+  </section>
 </template>
