Added Current Issues

--- a/app/client/templates/dashboard/components.html
+++ b/app/client/templates/dashboard/components.html
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-user" aria-hidden="true"> Your Feed</span>
   </div>
   <div class="dashboard__activity">
-    <ol class="dashboard__feed">
+    <!-- <ol class="dashboard__feed">
       <li class="dashboard__feed_item feed__addition">
         <div class="col-xs-2 feed__addition_left">
           <div class="feed__addition_icon">
@@ -184,7 +184,7 @@
           <h3 class="feed__message">You voted on #1234</h3>
         </div>
       </li>
-    </ol>
+    </ol> -->
   </div>
 </template>
 
