--- a/app/client/templates/dashboard/vote.html
+++ b/app/client/templates/dashboard/vote.html
@@ -1,5 +1,108 @@
 <template name="vote">
   <section class="vote">
-    <p>hey</p>
+    <div class="issues">
+      <div class="issues__title">
+        <span class="gn-icon gn-icon-vote" aria-hidden="true">Current Issues</span>
+      </div>
+      <!-- <div class="col-xs-12 issues__list">
+        <div class="issues__item">
+
+        </div>
+      </div> -->
+
+      <div class="issues__list" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default issues__item">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h2 class="panel-title panel__title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                How will we manage this?
+              </a>
+            </h2>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel__extra">
+              <div class="col-xs-4 panel__created">
+                <h4>Created at</h4>
+                <span>12.12.2015</span>
+              </div>
+              <div class="col-xs-4 panel__domain">
+                <h4>Domain</h4>
+                <span class="label label-default">Main</span>
+              </div>
+              <div class="col-xs-4 panel__votes">
+                <h4>Votes</h4>
+                <span>215</span>
+              </div>
+            </div>
+            <div class="panel-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee.
+            </div>
+            <button type="button" class="btn btn-success panel_button">Vote</button>
+          </div>
+        </div>
+        <div class="panel panel-default issues__item">
+          <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title panel__title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Should the CEO be fired?
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel__extra">
+              <div class="col-xs-4 panel__created">
+                <h4>Created at</h4>
+                <span>12.12.2015</span>
+              </div>
+              <div class="col-xs-4 panel__domain">
+                <h4>Domain</h4>
+                <span class="label label-default">Main</span>
+              </div>
+              <div class="col-xs-4 panel__votes">
+                <h4>Votes</h4>
+                <span>215</span>
+              </div>
+            </div>
+            <div class="panel-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+            <button type="button" class="btn btn-success panel_button">Vote</button>
+          </div>
+        </div>
+        <div class="panel panel-default issues__item">
+          <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title panel__title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Should we invest $50 Million?
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel__extra">
+              <div class="col-xs-4 panel__created">
+                <h4>Created at</h4>
+                <span>12.12.2015</span>
+              </div>
+              <div class="col-xs-4 panel__domain">
+                <h4>Domain</h4>
+                <span class="label label-default">Main</span>
+              </div>
+              <div class="col-xs-4 panel__votes">
+                <h4>Votes</h4>
+                <span>215</span>
+              </div>
+            </div>
+            <div class="panel-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+            <button type="button" class="btn btn-success panel_button">Vote</button>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </div>
   </section>
 </template>
