--- a/app/client/stylesheets/dashboard/vote.css
+++ b/app/client/stylesheets/dashboard/vote.css
@@ -1,19 +1,63 @@
+/**
+  *   Current Issues Section
+  **/
+
 .issues {
-  max-width: 1080px;
   margin: 60px auto 0;
 }
 
 .issues__title {
-  font-size: 34px;
+  font-size: 44px;
   margin: 35px 0;
   text-align: center;
 }
 
 .issues__item {
-  max-width: 750px;
+  min-width: 350px;
+  max-width: 650px;
+  min-height: 100px;
   border: 1px solid #c6c2c0;
   border-radius: 5px;
-  margin: 10px auto;
+  background-color: #fff;
+  margin: 15px 20px;
+  padding: 0;
+  text-align: center;
+}
+
+.issues__item-title {
+  color: #333;
+  height: 50px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+}
+
+.panel__title {
+  font-size: 28px;
+}
+
+
+
+/**
+  *   Past Votes Section
+  **/
+
+.past_votes {
+  width: 100%;
+  background-color: #c6c2c0;
+  overflow: hidden;
+  margin: 0;
+}
+
+.past__votes-item {
+  min-width: 350px;
+  max-width: 650px;
+  border: 1px solid #c6c2c0;
+  border-radius: 5px;
+  background-color: #fff;
+  margin: 15px auto 20px;
+  padding: 0;
+  text-align: center;
 }
 
 .panel__title a {
