--- a/app/client/templates/dashboard/menu.html
+++ b/app/client/templates/dashboard/menu.html
@@ -21,7 +21,7 @@
         </div>
       </nav>
     </li>
-    <li><a href="/">Profile Here</a></li>
+    <li><a href="/">{{ currentUser.profile.name }}</a></li>
   </ul>
 
   {{> yield}}
