--- a/app/client/stylesheets/homepage/home.css
+++ b/app/client/stylesheets/homepage/home.css
@@ -104,7 +104,7 @@ html {
 
 .landing__background {
   background-color: #fff;
-  background-image: url('graph2.jpg');
+  /*background-image: url('graph2.jpg');*/
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -352,8 +352,6 @@ html {
 .join {
   width: 100%;
   height: 300px;
-  background-image: url('./people.png');
-  background-size: 100% cover;
   overflow: hidden;
 }
 
