--- a/app/client/templates/dashboard/components.html
+++ b/app/client/templates/dashboard/components.html
@@ -249,14 +249,19 @@
       <div class="dashboard__stats_title">
         <span class="glyphicon glyphicon-signal" aria-hidden="true"> Statistics</span>
       </div>
-      <div class="dashboard__stats_global col-xs-6">
-        <div class="col-xs-6">test</div>
-        <div class="col-xs-6">test</div>
-        <div class="col-xs-6">test</div>
-        <div class="col-xs-6">test</div>
-      </div>
-      <div class="dashboard__stats_personal col-xs-6">
-        <h1>yo</h1>
+      <div class="dashboard__stats_global">
+        <div class="col-xs-3">
+          <h3 class="global__stats_title">Users</h3>
+        </div>
+        <div class="col-xs-3">
+          <h3 class="global__stats_title">Delegates</h3>
+        </div>
+        <div class="col-xs-3">
+          <h3 class="global__stats_title">Votes</h3>
+        </div>
+        <div class="col-xs-3">
+          <h3 class="global__stats_title">Issues</h3>
+        </div>
       </div>
     </div>
   </div>
