--- a/app/client/templates/dashboard/components.html
+++ b/app/client/templates/dashboard/components.html
@@ -243,7 +243,7 @@
   </div>
 </template>
 
-<template name="dashboard__stats">
+<template name="stats">
   <div class="dashboard__stats">
     <div class="container">
       <div class="dashboard__stats_title">
@@ -252,15 +252,19 @@
       <div class="dashboard__stats_global">
         <div class="col-xs-3">
           <h3 class="global__stats_title">Users</h3>
+          <p class="global__stats_item">{{all_users}}</p>
         </div>
         <div class="col-xs-3">
           <h3 class="global__stats_title">Delegates</h3>
+          <p class="global__stats_item">15</p>
         </div>
         <div class="col-xs-3">
           <h3 class="global__stats_title">Votes</h3>
+          <p class="global__stats_item">15</p>
         </div>
         <div class="col-xs-3">
           <h3 class="global__stats_title">Issues</h3>
+          <p class="global__stats_item">15</p>
         </div>
       </div>
     </div>
