Added Create Poll

--- a/app/client/stylesheets/dashboard/create/create.css
+++ b/app/client/stylesheets/dashboard/create/create.css
@@ -183,6 +183,24 @@ font-size: 24px;
   background-color: #3498db;
 }
 
+.select2-selection,
+.select2-selection--multiple {
+  background-color: #3498db !important;
+  border: 2px solid #ccc !important;
+}
+
+.select2-search__field {
+  width: 200px !important;
+  font-size: 16px !important;
+
+}
+
+.select2-selection__choice {
+  background-color: #3498db !important;
+  font-size: 16px !important;
+}
+
+
 /*
  * Affix and center
  */
