--- a/app/client/templates/dashboard/create/create.html
+++ b/app/client/templates/dashboard/create/create.html
@@ -31,9 +31,9 @@
                     <li class="form-group animated hide inactive" data-color="#7C6992"  data-percentage="40%">
                       <label for="descriptionInput">
                         <h1>Nice, the name of your poll is <strong><span class="cName"></span></strong></h1>
-                        <p class="poll_descr">Optional: To help others better understand what your poll is about, you can provide a concise description here. (Max 120 chars)</p>
+                        <p class="poll_descr">To help others better understand what your poll is about, you can provide a concise description here. (Max 120 chars)</p>
                       </label>
-                      <textarea class="form-control" id="description" maxlength="145" placeholder="Description"></textarea>
+                      <textarea class="form-control make_btn_appear" id="description" maxlength="145" placeholder="Description"></textarea>
                     </li>
 
                     <!-- Third Section: Choose Options -->
@@ -50,7 +50,7 @@
                             <input id='option-1' type="text" value="" maxlength="20" placeholder="Option 1" class="form-control poll_options" />
                           </div>
                           <div class="form-group">
-                            <input id='option-2' type="text" value="" maxlength="20" placeholder="Option 2" class="form-control poll_options popup_success" />
+                            <input id='option-2' type="text" value="" maxlength="20" placeholder="Option 2" class="form-control poll_options popup_success popup_success" />
                           </div>
                         </div>
                         <div class="more_btn">
@@ -65,7 +65,7 @@
 
                           <!-- Time Limit: Number -->
                           <div class="row">
-                            <div class="col-xs-3 testtt">
+                            <div class="col-xs-3 time_limit">
                               {{> timelimit}}
                             </div>
                           </div>
@@ -73,10 +73,15 @@
                         <div class="col-xs-6">
                           <h5>Domain</h5>
 
-                          <!-- Time Limit: Number -->
+                          <!-- Domain Option -->
                           <div class="row">
-                            <div class="col-xs-3 testtt">
-
+                            <div class="col-xs-3 domain_options">
+                              <select id="domain_select" class="domain_select" multiple="multiple">
+                                <option value="all">All</option>
+                                <option value="finance">Finance</option>
+                                <option value="administrative">Administrative</option>
+                                <option value="product">Product</option>
+                              </select>
                             </div>
                           </div>
                         </div>
